=== Apm-Server version HEAD
https://github.com/elastic/apm-server/compare/x...master[View commits]

==== Breaking changes
- Changed response status code in the API from 201 to 202 {pull}34[34]
- Set dynamic mapping to false, enable only for `context.tags`. Fix issues with indexing. Removed from index: `request.headers_sent`, `app.argv`. Changes take place with {pull}43[43], after updating beats framework. 

==== Bugfixes
- changed `context.system.title` to `context.system.process_title`, removed `transaction.context`, `trace.context` (already available on top level). {pull}10[10]
- changed type of `context.request.body` from `object` to `text`. {pull}27[27]



==== Added

- apm-server now returns JSON error responses when the Accept header allows for it.


==== Deprecated


==== Known Issue
