@@ -143,7 +143,12 @@
                         }
                     ],
                     "context": {
-                        "sql": "SELECT * FROM product_types WHERE user_id=?"
+                        "db": {
+                            "instance": "customers",
+                            "statement": "SELECT * FROM product_types WHERE user_id=?",
+                            "type": "sql",
+                            "user": "readonly_user"
+                        }
                     }
                 },
                 {
@@ -205,7 +210,12 @@
                     "duration": 3.781912,
                     "stacktrace": [],
                     "context": {
-                        "sql": "SELECT * FROM product_types WHERE user_id=?"
+                        "db": {
+                            "instance": "customers",
+                            "statement": "SELECT * FROM product_types WHERE user_id=?",
+                            "type": "sql",
+                            "user": "readonly_user"
+                        }
                     }
                 }
             ]
