@@ -3,6 +3,8 @@ package package_tests
 import (
 	"testing"
 
+	"github.com/fatih/set"
+
 	"github.com/elastic/apm-server/processor/transaction"
 	"github.com/elastic/apm-server/tests"
 )
@@ -14,5 +16,5 @@ func TestEsDocumentation(t *testing.T) {
 	}
 	processorFn := transaction.NewProcessor
 	tests.TestEventAttrsDocumentedInFields(t, fieldsPaths, processorFn)
-	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, processorFn)
+	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, processorFn, set.New())
 }
